# Insurance-Prediction-Model

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  insurance_app.py  insurance_model.pkl  pyproject.toml  requirements.txt  scaler.pkl  vercel.json
api/: index.py
myenv/: pip-selfcheck.json  pyvenv.cfg
myenv/Scripts/: Activate.ps1  activate  activate.bat
public/: index.html
