[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-prediction"
version = "1.0.0"
description = "Insurance Cost Prediction API"
requires-python = ">=3.9"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "pandas==2.0.3",
    "numpy==1.26.4",
    "scikit-learn==1.4.2",
    "gunicorn==21.2.0"
]
